[package]
name = "coinbase-api"
version = "0.2.1"
authors = ["Thomas HUET <crates@thomash.fr>"]
description = "Client library for the Coinbase Pro API."
repository = "https://github.com/thomas-huet/coinbase-api-rust"
readme = "README.md"
keywords = ["coinbase"]
categories = ["api-bindings"]
license = "AGPL-3.0"

[dependencies]
base64 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.6"
hyper = "0.12"
hyper-tls = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7"
